misson-2 soluiton